fix alignment of image on cvpr page

--- a/cvpr24/main.css
+++ b/cvpr24/main.css
@@ -432,7 +432,6 @@ h4 {
   height: 200px;
   float: none;
   position:relative;
-  top: -7px;
 }
 
 .single-bod h3 {
@@ -557,6 +556,11 @@ body {
 
 .text-institute {
   color: #626467 !important;
+}
+
+.text-institute2 {
+  color: #626467 !important;
+  margin-top: -17px;
 }
 
 .text-name {
